--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <meta name="twitter:description" content="" />
                    
 
-<meta http-equiv="refresh" content="0;URL=''" /> 
+<meta http-equiv="refresh" content="0;URL='https://aa.sentbola.xyz/budget-friendly-trade-show-booth-design-ideas-for-small-businesses/'" /> 
 
 
  
